<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KWS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_news">News and Updates</string>
    <string name="action_about">About Us</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_refresh">Refresh</string>
    <string name="help">Help</string>
    <string name="search_hint">Hint hint</string>
    <string name="separator_dashes">______________________________________________</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="content_description">Content Description in string</string>
    <string name="version">Version 1.0.0</string>
    <string name="about_text">KWS is a Kenya Wildlife Service (KWS) mobile application that is used to provide information about National Parks in Kenya. \n\n Wildlife and other tourist attraction features in each of these parks are highlighted \n\n Tourists can plan their safari easily, quickly, using authentic consolidated information in tembeaKenya \n\n Feedback on poaching and pertinent information such as their experiences is available in a sleek, fast provision </string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="navigation_drawer_titles">
        <item>Home</item>
        <item>National Parks</item>
        <item>Wildlife</item>
        <item>Accomodation</item>
        <item>Camping</item>
        <item>Safari and Tours</item>
        <item>Bookings</item>
        <item>News</item>
        <item>Feedback</item>
        <item>About</item>
        <item>Help</item>
    </string-array>
    
    <!-- About Park Selected Items -->
    <string-array name="about_park_selected_tabs">
        <item>About park</item>
        <item>What to see</item>
        <item>Fun/Major Activities</item>
        <item>Where to stay</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons-->
    <array name="navigation_drawer_icons">
        <item>@drawable/ic_menu_home</item>
        <item>@drawable/parks</item>
        <item>@android:drawable/ic_menu_mapmode</item>
        <item>@drawable/ic_volume</item>
        <item>@android:drawable/ic_dialog_info</item>
        <item>@drawable/ic_menu_archive</item>
        <item>@drawable/ic_menu_help</item>
    </array>
    
    <!-- UI Card Home Icons-->
    <array name="ui_card_drawer_icons">
        <item>@drawable/national_parks</item>
        <item>@drawable/wildlife</item>
        <item>@drawable/news</item>
    </array>
    
    <!-- National Parks Icons-->
    <array name="national_parks_icons">
        <item>@drawable/giraffe</item>
        <item>@drawable/tiger</item>
        <item>@drawable/zebra</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>
