<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
<!-- android:actionViewClass="android.support.v7.widget.ShareActionProvider" 

    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kws.orangi.kenyawildlifeservice.MainActivity" 


 yourapp:actionProviderClass="android.support.v7.widget.ShareActionProvider"
-->
<!-- 
 <item
        android:id="@+id/action_searchh"
        android:orderInCategory="1"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        yourapp:showAsAction="ifRoom|collapseActionView"
        yourapp:actionViewClass="android.support.v7.widget.SearchView"/> 
     -->
    <item
        android:id="@+id/action_share"
        android:orderInCategory="2"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"        
        yourapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="3"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        yourapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="3"
        android:title="@string/action_feedback"
        yourapp:showAsAction="never"/>
	<item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        android:title="@string/action_about"
        yourapp:showAsAction="never"/>
</menu>
