<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="match_parent"
	        android:background="@color/White"
	        android:layout_height="match_parent">
	<RelativeLayout
	        android:layout_width="match_parent"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:paddingTop="30dp"
	        android:background="@color/White"
	        android:paddingBottom="20dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	    <ImageView
	        android:id="@+id/imageView1"
	        android:contentDescription="@string/content_description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:src="@drawable/logo_about" />
	<!-- 
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/imageView1"
	        android:layout_centerHorizontal="true"
	        android:textStyle="italic"
	        android:textColor="@color/Gray"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="tembeaKenya"
	         />
	          -->
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/imageView1"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/version" />
 
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView3"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="21dp"
	        android:text="@string/about_text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	<!-- 
	    <WebView
	        android:id="@+id/webView1"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_below="@+id/textView3" />
	-->
	</RelativeLayout>
</ScrollView>
